@@ -1,3 +1,11 @@
+Mon Dec 20 08:10:31 2004  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* configure.ac:
+	* m4/config_h.m4:
+
+	  Replaced autoheader templates for type and size in config_h.m4
+	  with a third argument to AC_DEFINE in configure.ac.
+
 Mon Dec 20 09:40:22 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/tao_other_tests.lst:
